# cardboard

./: .clang-format  .dir-locals.el  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  IPC.h  README.md  cardboard.desktop  meson.build  meson_options.txt  shell.nix
cardboard/: CMakeLists.txt  Command.h  Config.h  Cursor.cpp  Cursor.h  EventListeners.cpp  EventListeners.h  Helpers.h  IPC.cpp  IPC.h  Keyboard.cpp  Keyboard.h  Layers.cpp  Layers.h  Listener.h  NotNull.h  OptionalRef.h  Output.cpp  Output.h  OutputManager.cpp  OutputManager.h  SafePointer.h  Seat.cpp  Seat.h  Server.cpp  Server.h  Spawn.cpp  Spawn.h  StrongAlias.h  SurfaceManager.cpp  SurfaceManager.h  Tiling.cpp  Tiling.h  View.cpp  View.h  ViewAnimation.cpp  ViewAnimation.h  ViewManager.cpp  ViewManager.h  ViewOperations.cpp  (+9 more)
cardboard/commands/: commands.h  dispatch_command.cpp
cardboard/include/: Keyboard.h  Listener.h  Seat.h  View.h
cardboard/ipc_handlers/: commands.h  dispatch_command.cpp  handlers.h
cardboard/src/: main.cpp
cardboard/wlr_cpp_fixes/: meson.build
cardboard/wlr_cpp_fixes/include/wlr_cpp_fixes/: xwayland.h
cardboard/wlr_cpp_fixes/include/wlr_cpp_fixes/types/: wlr_layer_shell_v1.h
cutter/: main.cpp  meson.build  parse_arguments.h
docs/: Doxyfile
include/: layer_shell_v1.h
include/cardboard_common/: IPC.h
include/wlr_cpp/: backend.h  config.h  gen.sh  version.h  xcursor.h  xwayland.h
include/wlr_cpp/backend/: drm.h  headless.h  interface.h  libinput.h  multi.h  noop.h  session.h  wayland.h  x11.h
include/wlr_cpp/backend/session/: interface.h
include/wlr_cpp/interfaces/: wlr_input_device.h  wlr_keyboard.h  wlr_output.h  wlr_pointer.h  wlr_switch.h  wlr_tablet_pad.h  wlr_tablet_tool.h  wlr_touch.h
include/wlr_cpp/render/: dmabuf.h  drm_format_set.h  egl.h  gles2.h  interface.h  wlr_renderer.h  wlr_texture.h
include/wlr_cpp/types/: wlr_box.h  wlr_buffer.h  wlr_compositor.h  wlr_cursor.h  wlr_data_control_v1.h  wlr_data_device.h  wlr_export_dmabuf_v1.h  wlr_foreign_toplevel_management_v1.h  wlr_fullscreen_shell_v1.h  wlr_gamma_control_v1.h  wlr_gtk_primary_selection.h  wlr_idle.h  wlr_idle_inhibit_v1.h  wlr_input_device.h  wlr_input_inhibitor.h  wlr_input_method_v2.h  wlr_keyboard.h  wlr_keyboard_group.h  wlr_layer_shell_v1.h  wlr_linux_dmabuf_v1.h  wlr_list.h  wlr_matrix.h  wlr_output.h  wlr_output_damage.h  wlr_output_layout.h  wlr_output_management_v1.h  wlr_pointer.h  wlr_pointer_constraints_v1.h  wlr_pointer_gestures_v1.h  wlr_presentation_time.h  wlr_primary_selection.h  wlr_primary_selection_v1.h  wlr_region.h  wlr_relative_pointer_v1.h  wlr_screencopy_v1.h  wlr_seat.h  wlr_server_decoration.h  wlr_surface.h  wlr_switch.h  wlr_tablet_pad.h  (+11 more)
include/wlr_cpp/util/: edges.h  log.h  region.h
include/wlr_cpp_fixes/: xwayland.h
libcardboard/: meson.build
libcardboard/include/: command_protocol.h  ipc.h
libcardboard/include/cardboard/: client.h  command_protocol.h  ipc.h
libcardboard/include/cutter/: client.h
libcardboard/src/: client.cpp  command.capnp.c++  command.capnp.h  command_protocol.cpp  ipc.cpp
libcommand_protocol/: meson.build
libcommand_protocol/include/: command_protocol.h
libcommand_protocol/src/: command.capnp  command.capnp.c++  command.capnp.h  command_protocol.cpp
man/: cardboard.1.md  cutter.1.md
nix/: sources.json
protocols/: meson.build
subprojects/: .gitignore  cereal.wrap  expected.wrap  wlroots.wrap
util/: CMakeLists.txt
util/include/: ListView.h  Table.h  TypeId.h  UpdateHandler.h
